# todo-cli

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml  setup.py
docs/: README.md  USAGE.md
src/: cli.py  task.py  tasklist.py
src/cli/: cli.py
tests/: test_task.py
todo_cli/: cli.py  main.py  task.py  tasklist.py
